Remove Password Plaintext Storage
Remove Password Plaintext Storage and support for it from:
-Launch Configuration
-StockDataDownloadMain

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,12 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}\\src\\EPMain.py",
             "console": "integratedTerminal",
-            "args":[
-                "-dp",
-                "Sora1674@",
-                "-ep",
-                "PrayersAndFaith"
-            ],
+            "args":[],
             "cwd": "${workspaceFolder}\\src"
         },
         
